--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-minimal-pie-chart": "^8.2.0",
     "react-moment": "^1.1.1",
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
