--- a/package.json
+++ b/package.json
@@ -16,17 +16,19 @@
     "@types/react-dom": "^17.0.14",
     "@types/react-router": "^5.1.18",
     "@types/react-router-dom": "^5.3.3",
+    "apexcharts": "^3.44.0",
     "currencies.json": "^1.0.2",
     "mobx": "^6.5.0",
     "mobx-react": "^7.3.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^17.0.2",
-    "react-minimal-pie-chart": "^8.2.0",
     "react-moment": "^1.1.1",
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-toastify": "^9.1.3",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
@@ -57,6 +59,7 @@
   "devDependencies": {
     "mini-css-extract-plugin": "2.4.5",
     "moment": "^2.29.1",
-    "react-moment": "^1.1.1"
+    "react-moment": "^1.1.1",
+    "tailwindcss": "^3.3.5"
   }
 }
